# hitalent-task

./: .env.example  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 14925a43177a_add_tables.py
app/: main.py
app/core/: config.py  database.py
app/models/: reservation.py  table.py
app/routers/: main.py  reservation.py  table.py
app/schemas/: __init__.py  reservation.py  table.py
app/services/: reservation.py  table.py
tests/: conftest.py  test_reservations.py  test_tables.py
