[project]
name = "hitalent-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "passlib[bycrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]
